修复 lint-staged 检查文件后缀配置错误问题

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     }
   },
   "lint-staged": {
-    "*.{ts.tsx,js}": [
+    "*.{ts,tsx,js}": [
       "eslint --config .eslintrc.js"
     ],
     "*.{css,less,scss}": [
